[project]
name = "awesome-ai-red-teaming-jp-mcp"
version = "0.1.0"
description = "MCP server for querying AI Red Teaming / AI Safety resources"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.9",
]
